--- a/style.css
+++ b/style.css
@@ -7,6 +7,25 @@
     box-sizing: border-box;
 }
 /*-------------------
+    VARIABILI
+-------------------*/
+:root {
+    --font-icon: 20px;
+}
+/*-------------------
+    TYPO
+-------------------*/
+.user_preferences i, .chat_preferences i {
+    font-size: var(--font-icon)
+}
+.chat_icon, .user_icon {
+    font-size: 14px;
+}
+.chat_icon span {
+    font-size: 12px;
+    color: #6b7376;
+}
+/*-------------------
     COMMON
 -------------------*/
 body {
@@ -19,10 +38,8 @@ body {
         #DBDBD2 100vh
     );
     width: 100%;
+    font-weight: 400;
 }
-/*-------------------
-    CONTAINER/COMMON
--------------------*/
 .main_container {
     max-width: 1200px;
     height: calc(100vh - 50px);
@@ -39,6 +56,32 @@ body {
     background-color: #eaeaea;
     height: 70px;
     width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    padding: 10px;
+    padding-right: 20px;
+    align-items: center;
+}
+.user_icon, .chat_icon {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    flex-grow: 1;
+    gap: 10px;
+    align-items: center;
+}
+.user_preferences, .chat_preferences {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+    color: #b1b1b1;
+    flex-grow: 1;
+    gap: 15px;
+}
+.user_icon img, .chat_icon img{
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
 }
 /*-------------------
     MESSAGES
