--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,12 @@ body {
 .contact:hover {
     background-color: #e9ebeb;
 }
+.active {
+    background-color: #dbdede;
+}
+.active:hover {
+    background-color: #dbdede;
+}
 .contact img {
     width: 2.8125rem;
     height: 2.8125rem;
