Creata funzione per cercare contatti (Milestone 4)

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url(_typo.css);
 @import url(_variabili.css);
 @import url(_reset.css);
+@import url(_chat_style_block);
 /*-------------------
     COMMON
 -------------------*/
