--- a/css/style.css
+++ b/css/style.css
@@ -74,11 +74,12 @@ body {
 .notification_messages {
     background-color: var(--color-notification);
     width: 100%;
-    height: 4.375rem;
+    max-height: 4.375rem;
     display: flex;
     align-items: center;
     gap: 0.625rem;
     padding: 0.625rem 1.25rem;
+    flex-grow: 0;
 }
 .notification_messages i {
     display: inline-block;
@@ -92,7 +93,7 @@ body {
 .search_messages {
     background-color: #fafafa;
     width: 100%;
-    height: 3.125rem;
+    max-height: 3.125rem;
     padding: 0.625rem;
     color: #b6b9bd;
     display: flex;
