--- a/css/style.css
+++ b/css/style.css
@@ -203,13 +203,31 @@ body {
 }
 .message_received, .message_sent {
     display: inline-block;
-    padding: 5px 50px 5px 10px;
+    padding: 0.3125rem 3.5rem 0.3125rem 0.625rem;
     border-radius: 0.625rem;
     position: relative;
 }
 .time_message {
     position: absolute;
     bottom: 0.2rem;
-    right: 0.3rem;
+    right: 1rem;
     font-size: var(--font-extra-small);
+}
+.option_message {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 10;
+    top: 0.225rem;
+    right: 0.625rem;
+    color: #b1b1b1;
+}
+.opt_ms_green {
+    box-shadow: -2px 2px 8px 3px #d5f9ba;
+    background-color: #d5f9ba;
+}
+.opt_ms_white {
+    box-shadow: -2px 2px 8px 3px white;
+    background-color: white;
 }
